--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@ body, html{
 .page_container{
   width: 1700px;
   margin: 0 auto;
-  height: 100vh;
-  border: 1px solid #ccc;
+  width: 100%;
 }
 
 header{
@@ -52,6 +51,9 @@ nav ul a{
     padding-bottom: 10px;
     align-items: center;
 }
+nav li a:hover{
+    color: rgb(137, 137, 142); 
+}
 
 .hero_image{
     background-image: url("hero_mountain_bike.jpg");
@@ -65,12 +67,15 @@ nav ul a{
 
     display: flex;
     align-items: center;
+    justify-content: center;
+    height: 1000px;
+    width: 100%;
 }
 
 .hero_text{
     display: flex;
     flex-direction: column;
-    padding-left: 300px;
+    padding-right: 800px;
 }
 .hero_text h1{
     font-size: 60px;
@@ -113,6 +118,7 @@ nav ul a{
     padding-left: 125px;
     padding-top: 20px;
     padding-bottom: 20px;
+    border-radius: 10px;
 }
 .about_button{
     display: flex;
@@ -132,6 +138,7 @@ nav ul a{
     padding-bottom: 10px;
     align-items: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transform: all 0.3 ease;
 }
 .about_button a:hover{
     background-color: #3D3D3D;
@@ -142,6 +149,7 @@ nav ul a{
     background-color: #EDF4ED;
     margin-right: 155px;
     padding: 50px;
+    border-radius: 10px;
 }
 .learn_more h2{
     font-size: 35px;
@@ -165,11 +173,13 @@ nav ul a{
     padding-right: 125px;
     padding-top: 20px;
     padding-bottom: 20px;
+    border-radius: 10px;
 }
 .gear_up{
     background-color: white;
     margin-left: 155px;
     padding: 50px;
+    border-radius: 10px;
 }
 .gear_up h2{
     font-size: 35px;
@@ -200,11 +210,74 @@ nav ul a{
     padding-bottom: 10px;
     align-items: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transform: all 0.3 ease;
 }
 .contact_button a:hover{
     background-color: #3D3D3D;
     color: white;
 }
+
+
+
+.summary_section{
+    margin-top: 50px;
+}
+.summary_section_image{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.summary_text h2{
+    display:flex;
+    justify-content: center;
+    font-size: 40px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.summary_text p{
+    color: #3D3D3D;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    line-height: 1.6;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.information_section{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 50px 0;
+    gap: 40px;
+}
+
+.info_column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+}
+
+.info_column img{
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.info_block h3{
+    font-size: 28px;
+    margin-bottom: 15px;
+    text-align: center;
+    color: #3D3D3D;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.info_block p{
+    font-size: 18px;
+    line-height: 1.6;
+    color: #3D3D3D;
+    text-align: left;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 footer{
     background-color: #3D3D3D;
     height: 80px;
