--- a/style.css
+++ b/style.css
@@ -115,9 +115,9 @@ nav li a:hover{
     justify-content: space-between;
 }
 .about_section img{
-    padding-left: 125px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-left: 125px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 10px;
 }
 .about_button{
@@ -170,9 +170,9 @@ nav li a:hover{
     justify-content: space-between;
 }
 .contact_section img{
-    padding-right: 125px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-right: 125px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 10px;
 }
 .gear_up{
