--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body, html{
 .page_container{
   width: 1700px;
   margin: 0 auto;
-  width: 100%;
 }
 
 header{
@@ -278,10 +277,12 @@ nav li a:hover{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+
+
 .title{
     margin-top: 40px;
     margin-bottom: 20px;
-    margin-left: 60px;
+    margin-left: 132px;
     margin-right: 60px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: normal;
@@ -316,7 +317,6 @@ form label {
     align-items: center;
     background-color: #EDF4ED;
     padding: 40px;
-    box-sizing: border-box;
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
     padding-right: 100px;
@@ -326,18 +326,33 @@ form label {
     padding: 10px;
     margin-bottom: 20px;
     font-size: 16px;
-    box-sizing: border-box;
+    padding-right: 200px;
+    border-radius: 9px;
 }
+#message{
+    padding-bottom: 40px;
+}
+
 form{
     display: flex;
     flex-direction: column;
-    font-size: 20px;
+    font-size: 22px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 #submit{
     padding: 10px;
-    font-size: 15px;
+    font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 8px;
+    background-color: #ffffff;
+    color: #3D3D3D;
+    border: 1px #3D3D3D solid;
+    font-weight: bold;
+}
+#submit:hover{
+    background-color: #3D3D3D;
+    color: #ffffff;
 }
 
 
