--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header{
     color: white;
     display: flex;
     justify-content: space-evenly;
-    height: 80px;
+    height: 100px;
 }
 header h1{
     padding-left: 20px;
@@ -24,6 +24,7 @@ header h1{
     margin-bottom: 0px;
 }
 nav{
+    display: flex;
     align-items: center;
     padding: 15px;
 }
@@ -355,10 +356,9 @@ form{
     color: #ffffff;
 }
 
-
 footer{
     background-color: #3D3D3D;
-    height: 80px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
