--- a/style.css
+++ b/style.css
@@ -327,11 +327,13 @@ form label {
     padding: 10px;
     margin-bottom: 20px;
     font-size: 16px;
-    padding-right: 200px;
     border-radius: 9px;
+    width: 300px;
+    box-sizing: border-box;
 }
 #message{
-    padding-bottom: 40px;
+    min-height: 100px;
+    resize: vertical;
 }
 
 form{
