--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ nav li a:hover{
 .title{
     margin-top: 40px;
     margin-bottom: 20px;
-    margin-left: 132px;
+    margin-left: 160px;
     margin-right: 60px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: normal;
@@ -334,6 +334,7 @@ form label {
 #message{
     min-height: 100px;
     resize: vertical;
+    border: 2px solid #3D3D3D;
 }
 
 form{
