--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ header h1{
     margin-top: 0px;
     margin-bottom: 0px;
 }
+header h1 a{
+    color: #ffffff;
+    text-decoration: none;
+    transform: all 0.3 ease;
+}
+header h1:hover{
+    text-decoration: underline;
+}
 nav{
     display: flex;
     align-items: center;
